--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "steadeck-nydus-sync",
-  "productName": "Steam Deck Nydus",
+  "productName": "Nydus",
   "version": "0.0.1",
   "description": "Manage and syncronize games across steam deck and pc",
   "main": ".webpack/main",
   "scripts": {
-    "start": "cross-env NODE_ENV=development electron-forge start",
+    "start": "cross-env NODE_ENV=development DEBUG=nydus:* electron-forge start",
     "package": "electron-forge package",
     "make": "electron-forge make",
     "publish": "electron-forge publish",
@@ -42,6 +42,7 @@
     "@marshallofsound/webpack-asset-relocator-loader": "^0.5.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
     "@reforged/maker-appimage": "^1.2.1",
+    "@types/debug": "^4.1.7",
     "@types/node": "^18.6.1",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
@@ -71,6 +72,7 @@
     "webpack": "^5.74.0"
   },
   "dependencies": {
+    "debug": "^4.3.4",
     "electron-squirrel-startup": "^1.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
