--- a/package.json
+++ b/package.json
@@ -72,8 +72,11 @@
     "webpack": "^5.74.0"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
     "debug": "^4.3.4",
     "electron-squirrel-startup": "^1.0.0",
+    "material-ui-popup-state": "^4.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
