--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@marshallofsound/webpack-asset-relocator-loader": "^0.5.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
     "@reforged/maker-appimage": "^1.2.1",
+    "@types/bootstrap": "^5.2.4",
     "@types/debug": "^4.1.7",
     "@types/node": "^18.6.1",
     "@types/react": "^18.0.15",
@@ -50,6 +51,7 @@
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
     "@vercel/webpack-asset-relocator-loader": "^1.7.3",
+    "bootstrap": "^5.2.1",
     "classnames": "^2.3.1",
     "cross-env": "^7.0.3",
     "css-loader": "^6.7.1",
